--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
 .banner{
   display: flex;
+  background-color:#706E6C;
+    padding:1px 5px 5px 5px;
+    margin-left: 50px;
+    margin-right: 50px
+
 }
