--- a/main.css
+++ b/main.css
@@ -1,8 +1,39 @@
-.banner{
-  display: flex;
-  background-color:#706E6C;
-    padding:1px 5px 5px 5px;
-    margin-left: 50px;
-    margin-right: 50px
+body{
+  margin:2% 10%;
+  border: 1px solid black;
+}
+
+.container{
+  width: 80%;
+background-color: #eee;
+margin-left: 10px;
+margin-top: 10px;
+margin-bottom: 10px;
+}
+
+div{
+  display: inline-block;
+}
+.nav-items{
+
+}
+
+
+
+
+
+
+
+  /*display: flex;*/
+  /*background-color:#706E6C;*/
+
+    /*padding:10px 5px 5px 5px;*/
+    /*margin-left: 50px;*/
+    /*margin-right: 50px;*/
+
+}
+
+ul{
+  display: inline-block;
 
 }
