--- a/main.css
+++ b/main.css
@@ -4,19 +4,25 @@ body{
 }
 
 .container{
-  width: 80%;
-background-color: #eee;
+  width: 95%;
 margin-left: 10px;
 margin-top: 10px;
 margin-bottom: 10px;
+background-color:#706E6C;
 }
 
 div{
   display: inline-block;
 }
 .nav-items{
+  display: inline-block;
+  padding: 10px;
+  border-style: solid;
+  border-width: 0px 0px 0px 2px;
+  border-color: white;
 
 }
+.login-link{}
 
 
 
@@ -31,9 +37,9 @@ div{
     /*margin-left: 50px;*/
     /*margin-right: 50px;*/
 
-}
+/*}*/
 
-ul{
+/*ul{
   display: inline-block;
 
-}
+}*/
