--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@ background-color:#706E6C;
 div{
   display: inline-block;
 }
+
 .nav-items{
   display: inline-block;
   padding: 10px;
@@ -22,7 +23,16 @@ div{
   border-color: white;
 
 }
-.login-link{}
+
+.login-link{
+  position: absolute;
+  top: 80px;
+  right: 0;
+  width: 20px;
+  height: 100px;
+  border: 3px solid #73AD21;
+    border-color: white;
+  }
 
 
 
