I wasn't able to make much further progress on the finished product.  Still wondering if the list item tag is the best way to go for all of the header items.  The bullet points are frustrating and I never got past them. I spent time this evening copying some of my handwritten notes into stickies.app, which seemed to solidify some points.  Tomorrow is another opportunity for progress!  : )

--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ body{
   margin:2% 10%;
   border: 1px solid black;
 }
-
+/*............The Grey Bar Itself*/
 .container{
   width: 95%;
 margin-left: 10px;
@@ -10,11 +10,13 @@ margin-top: 10px;
 margin-bottom: 10px;
 background-color:#706E6C;
 }
-
+/*...........The Nav Bar Text*/
 div{
   display: inline-block;
 }
+.IYN-title{
 
+}
 .nav-items{
   display: inline-block;
   padding: 10px;
